--- a/src/main/asciidoc/js/eventbus.adoc
+++ b/src/main/asciidoc/js/eventbus.adoc
@@ -328,3 +328,78 @@ You can run Vert.x clustered on the command line with
 
 If you're registering event bus handlers from inside verticles, those handlers will be automatically unregistered
 when the verticle is undeployed.
+
+== Configuring the event bus
+
+The event bus can be configured. It is particularly useful when the event bus is clustered. Under the hood
+the event bus uses TCP connections to send and receive message, so the
+`link:../dataobjects.html#EventBusOptions[EventBusOptions]` let you configure all aspects of these TCP connections. As
+the event bus acts as a server and client, the configuration is close to
+`link:../dataobjects.html#NetClientOptions[NetClientOptions]` and `link:../dataobjects.html#NetServerOptions[NetServerOptions]`.
+
+[source,js]
+----
+var Vertx = require("vertx-js/vertx");
+var options = {
+  "eventBusOptions" : {
+    "ssl" : true,
+    "keyStoreOptions" : {
+      "path" : "keystore.jks",
+      "password" : "wibble"
+    },
+    "trustStoreOptions" : {
+      "path" : "keystore.jks",
+      "password" : "wibble"
+    },
+    "clientAuth" : 'REQUIRED'
+  }
+};
+
+Vertx.clusteredVertx(options, function (res, res_err) {
+  if (res_err == null) {
+    var vertx = res;
+    var eventBus = vertx.eventBus();
+    console.log("We now have a clustered event bus: " + eventBus);
+  } else {
+    console.log("Failed: " + res_err);
+  }
+});
+
+----
+
+The previous snippet depicts how you can use SSL connections for the event bus, instead of plain TCP
+connections.
+
+**WARNING**: to enforce the security in clustered mode, you **must** configure the
+cluster manager to use encryption or enforce security. Refer to the documentation of the cluster
+manager for further details.
+
+The event bus configuration needs to be consistent in all the cluster nodes.
+
+The `link:../dataobjects.html#EventBusOptions[EventBusOptions]` also lets you specify whether or not the event bus is
+clustered, the port and host, as you would do with `link:../dataobjects.html#VertxOptions#setClustered[clustered]`,
+ `link:../dataobjects.html#VertxOptions#getClusterHost[getClusterHost]` and `link:../dataobjects.html#VertxOptions#getClusterPort[getClusterPort]`.
+
+When used in containers, you can also configure the public host and port:
+
+[source,js]
+----
+var Vertx = require("vertx-js/vertx");
+var options = {
+  "eventBusOptions" : {
+    "clusterPublicHost" : "whatever",
+    "clusterPublicPort" : 1234
+  }
+};
+
+Vertx.clusteredVertx(options, function (res, res_err) {
+  if (res_err == null) {
+    var vertx = res;
+    var eventBus = vertx.eventBus();
+    console.log("We now have a clustered event bus: " + eventBus);
+  } else {
+    console.log("Failed: " + res_err);
+  }
+});
+
+----
