--- a/src/main/asciidoc/js/net.adoc
+++ b/src/main/asciidoc/js/net.adoc
@@ -651,6 +651,20 @@ var client = vertx.createNetClient(options);
 If `link:../dataobjects.html#ClientOptionsBase#setTrustAll[trustAll]` is not set then a client trust store must be
 configured and should contain the certificates of the servers that the client trusts.
 
+By default, host verification is disabled on the client.
+To enable host verification, set the algorithm to use on your client (only HTTPS and LDAPS is currently supported):
+
+
+[source,js]
+----
+var options = {
+  "ssl" : true,
+  "hostnameVerificationAlgorithm" : "HTTPS"
+};
+var client = vertx.createNetClient(options);
+
+----
+
 Likewise server configuration, the client trust can be configured in several ways:
 
 The first method is by specifying the location of a Java trust-store which contains the certificate authority.
