Fix #50 - add a warning about nashorn limits in the documentation

--- a/src/main/asciidoc/js/override/dependencies.adoc
+++ b/src/main/asciidoc/js/override/dependencies.adoc
@@ -24,3 +24,14 @@ project descriptor to access the Vert.x Core API and enable the JavaScript suppo
 compile "io.vertx:vertx-core:3.3.0-SNAPSHOT"
 compile "io.vertx:vertx-lang-js:3.3.0-SNAPSHOT"
 ----
+
+[IMPORTANT]
+====
+The JavaScript support is based on http://openjdk.java.net/projects/nashorn/[Nashorn], and so is
+constrained by Nashorn feature set and limits.
+
+It does not support EcmaScript 6, until Nashorn support it.
+
+In addition, _native_ NPM modules cannot be used as they are _compiled_ for Node.JS. NPMs developed in EcmaScript 6
+are also not usable.
+====
